--- a/monitor/monitor_webTransaction.html
+++ b/monitor/monitor_webTransaction.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_monitor book_monitor_monitor_webTransaction">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,246 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>监控-web事务</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p>该页面为 Web 事务页面，共由事务栏、Top5 Web 事务响应时间图、吞吐量图、慢事务追踪列表这 4 个部分组成。如下图：</p>
+
+<p>事务栏：</p>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>事务栏展示当前应用下的所有事务。</li>
+<li>事务栏可以按照“响应时间占比大到小”、“平均响应时间从长到短”、“性能指数从低到高”、“吞吐量从高到低”来进行排序。点击单条事务，可以打开单个事务页面。单个事务页面，展示了当前事务的详细信息，包括“性能”和“详情”部分。</li>
+<li>单个事务页面，将在后面单独作为一部分进行介绍。</li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p>Top5 Web 事务响应时间图：</p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>以面积图的方式，展示了平均响应时间最长的 5 个 Web 事务， 其响应时间随时间的变化情况。
+<img src="/images/aimonitor_transaction00.png" alt="Aimonitor transaction00" /></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p>吞吐量图：</p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>以折线图的方式，展示 Web 事务的吞吐量随时间的变化情况。</li>
+</ul>
+
+<p>慢事务追踪列表：</p>
+
+<ul>
+<li>该列表展示了当前应用发生响应时间超出阈值的事务时，相应事务的追踪记录。</li>
+<li>点击单条追踪记录，查看该条记录的详细信息。</li>
+<li>单条追踪记录页面，将在下面单独进行介绍。</li>
+</ul>
+
+<p>单条事务</p>
+
+<ul>
+<li>点击单条事务时，会展示当前事务的详细信息，包括性能、详情这 2 个部分。而每个部分都有相应的图表，用于从各个指标维度展示出单个事务的数据。</li>
+</ul>
+
+<p><strong>第 1 部分——性能</strong></p>
+
+<ul>
+<li>在性能部分，共有 4 个图表，分别为执行时间图、吞吐量图、崩溃列表、慢事务追踪列表。这 4 个图表分别从不同的指标维度，对事务的性能数据进行了解读。</li>
+</ul>
+
+<p>然而，什么是执行时间?它和响应时间有什么区别?</p>
+
+<ul>
+<li>执行时间和响应时间是两个不同的概念，具体区别详见“术语解释”。</li>
+</ul>
+
+<p>执行时间图：</p>
+
+<ul>
+<li>在执行时间图中，展示了该事务各个组件的执行时间随时间的变化情况。</li>
+</ul>
+
+<p>查看具体节点的指标数据：</p>
+
+<ul>
+<li>将鼠标悬停在图上某个节点，将显示节点对应时间段内的指标数据（节点对应的时间段，随时间选择器选择的时间跨度而变化），包括总响应时间、平均响应 时间、总执行时间、吞吐量、执行次数。
+<img src="/images/aimonitor_transactionone00.png" alt="Aimonitor transactionone00" /></li>
+</ul>
+
+<p>吞吐量图：</p>
+
+<ul>
+<li>吞吐量图展示了该事务的吞吐量随时间的变化情况。</li>
+</ul>
+
+<p>添加为关键事务：</p>
+
+<ul>
+<li>点击按钮，可以将当前的 Web 事务添加为关键事务。</li>
+<li>关键事务，将在“关键事务”功能模块进行介绍。</li>
+</ul>
+
+<p>介绍了执行时间图和吞吐量图这 2 个图表，下面将介绍崩溃列表、慢事务追踪列表这 2 个部分。<br></p>
+
+<p>崩溃列表：</p>
+
+<ul>
+<li>在执行时间图中，展示了该事务各个组件的执行时间随时间的变化情况。
+<img src="/images/aimonitor_transactionbreakdown00.png" alt="Aimonitor transactionbreakdown00" /></li>
+</ul>
+
+<p>慢事务追踪列表：</p>
+
+<ul>
+<li>展示该事务的所有慢事务追踪记录。</li>
+</ul>
+
+<p><strong>第 2 部分——详情</strong></p>
+
+<p>在详情部分，共有 5 个图表，分别为基本指标和事务拓扑图、响应时间图、错误率图、Apdex 图、慢事务追踪列表。这 5 个图表分别从不同的维度，对事务的性能数据进行了解读和展示。</p>
+
+<p>基本指标和事务拓扑图：</p>
+
+<ul>
+<li>基本指标：展示该事务的吞吐量、响应时间、错误率和 Apdex 值。</li>
+<li>事务拓扑图：展示该事务调用其他事务、数据库、外部服务的拓扑关系。</li>
+<li>事务拓扑图的功能，与应用拓扑图相同，点击不同图标可以弹出展示窗口，展示相应模块的详细信息。</li>
+</ul>
+
+<p>添加为关键事务：</p>
+
+<ul>
+<li>点击此处，会弹出填写框，将该事务添加为关键事务，并为该其设置名称和阈值。
+<img src="/images/aimonitor_transactionlist00.png" alt="Aimonitor transactionlist00" /></li>
+</ul>
+
+<p>吞吐量图：</p>
+
+<ul>
+<li>吞吐量图展示了该事务的吞吐量随时间的变化情况。</li>
+</ul>
+
+<p>介绍了执行基本指标和事务拓扑图、响应时间图这 2 个图表，下面将介绍错误率图、Apdex 图这 2 个部分。（此处的慢事务追踪列表，与性能部分相同。在此处重复，只是为了避免用户需要在页面间切换，方便用户查看数据。故不再赘述。）</p>
+
+<p>错误率图：</p>
+
+<ul>
+<li>错误率是指“该事务的错误次数与事务总次数的比率”，错误率图展示了该比率随时间的变化情况。</li>
+</ul>
+
+<p>Apdex 图：</p>
+
+<ul>
+<li>Apdex 值用于量化应用的性能，而在此处，则用于衡量单条事务的性能。该图展示了该事务的 Apdex 值随时间的变化情况。
+<img src="/images/aimonitor_transactionerrorinfo01.png" alt="Aimonitor transactionerrorinfo01" /></li>
+</ul>
+
+<p>慢事务追踪列表：</p>
+
+<ul>
+<li>此处的慢事务追踪列表，与性能部分相同。在此处重复，只是为了避免用户需要在页面间切换，方便用户查看数据。故不再赘述。</li>
+</ul>
+
+<p>单条慢事务追踪</p>
+
+<ul>
+<li>点击单条慢事务追踪时，会展示当前慢事务追踪的详细信息，包括概要、 详情、参数、SQL 这 4 个部分。</li>
+</ul>
+
+<p>第 1 部分——概要</p>
+
+<p>基本信息：</p>
+
+<ul>
+<li>展示该条慢事务追踪记录的基本信息，包括开始时间、总耗时、对应的实例（agent）。</li>
+</ul>
+
+<p>组件执行时间面积图：</p>
+
+<ul>
+<li>以横置的柱状面积图方式，展示了在本次慢事务追踪记录中，相应事务的各个组件，其执行时间在事务总耗时中所占的百分比。</li>
+<li>横置的柱状面积图，能够更直观的展示百分比数据。
+<img src="/images/aimonitor_transactiontrack.png" alt="Aimonitor transactiontrack" /></li>
+</ul>
+
+<p>最慢组件列表：</p>
+
+<ul>
+<li>展示在该 trace 记录中，执行慢的组件的调用次数、执行时间、组件的执行时间在事务响应时间中所占的时间百分比。</li>
+</ul>
+
+<p>第 2 部分——详情</p>
+
+<p>方法列表：</p>
+
+<ul>
+<li>展示该事务的各个方法的时间戳、耗时、耗时百分比和调用详情。</li>
+</ul>
+
+<p>方法追踪功能：</p>
+
+<ul>
+<li>点击此处，查看该方法的详细日志信息，从而定位问题。
+<img src="/images/aimonitor_transactioninfo00.png" alt="Aimonitor transactioninfo00" /></li>
+</ul>
+
+<p>颜色标识：</p>
+
+<ul>
+<li>耗时百分比为红色和黄色的方法是耗时较长的地方，需要重点关注。</li>
+</ul>
+
+<p>HTTP 请求：</p>
+
+<ul>
+<li>点击此处，查看调用该方法的 HTTP 请求。</li>
+</ul>
+
+<p>第 3 部分——参数</p>
+
+<ul>
+<li>在单条慢事务追踪记录的参数部分，展示了该事务的 HTTP 响应状态码、
+JVM 线程池名称，以及该事务中的自定义参数。如下图所示。
+<img src="/images/aimonitor_transactionparameters.png" alt="Aimonitor transactionparameters" /></li>
+</ul>
+
+<p>那么，什么是 HTTP 状态码?</p>
+
+<ul>
+<li>HTTP 状态码（HTTP Status Code）是用以表示网页服务器 HTTP 响应状态的 3 位数字代码。（可参照 HTTP 状态码详解）</li>
+</ul>
+
+<table><thead>
+<tr>
+<th style="text-align: left">常见状态码</th>
+<th style="text-align: left">含义</th>
+</tr>
+</thead><tbody>
+<tr>
+<td style="text-align: left">200 OK</td>
+<td style="text-align: left">请求已成功</td>
+</tr>
+<tr>
+<td style="text-align: left">301/302 Moved Permanently（重定向）</td>
+<td style="text-align: left">请求的 URL 已移走。Response 包含一个 Location URL， 说明资源现在所处的位置。</td>
+</tr>
+<tr>
+<td style="text-align: left">304 Not Modified（未修改）</td>
+<td style="text-align: left">客户的缓存资源是最新的， 要客户端使用缓存。</td>
+</tr>
+<tr>
+<td style="text-align: left">404 Not Found</td>
+<td style="text-align: left">未找到资源。</td>
+</tr>
+<tr>
+<td style="text-align: left">501 Internal Server Error</td>
+<td style="text-align: left">服务器遇到一个错误，使其无法对请求提供服务。</td>
+</tr>
+</tbody></table>
+
+<p><br>第 4 部分——SQL</p>
+
+<ul>
+<li>在单条慢事务追踪记录的 SQL 部分，展示该事务进行的数据库查询的详细信息，包括调用总时间、调用次数和 SQL 语句的类型。如下图所示。
+<img src="/images/aimonitor_transactionsql.png" alt="Aimonitor transactionsql" /></li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
