--- a/event/event_errorInfo.html
+++ b/event/event_errorInfo.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_event book_event_event_errorInfo">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,38 +441,30 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>事件-错误信息</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p>错误信息页面，展示了应用程序返回出错以及抛出异常等异常状况的详细信息，包括错误率图和错误列表这 2 个部分。</p>
 
-<ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
-</ul>
-
-<p><strong>登陆</strong><br></p>
+<p><strong>错误率图：</strong><br></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>以折线图的方式，展示了该应用的错误率随时间的变化情况。</li>
+<li>鼠标悬停在图上某个节点，将显示节点对应时间段内的指标数据(节点对应的时间段，随时间选择器选择的时间跨度而变化)，包括错误率、错误次数、总次数。
+<img src="/images/aimonitor_eventerror01.png" alt="Aimonitor eventerror01" /></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>错误列表：</strong><br></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>错误列表，展示应用发生的各种错误的相关信息，包括第一次出现时间、最后一次出现时间、错误请求地址、错误请求的响应消息、错误出现次数。</li>
+<li>点击单个错误的请求地址，将会出现单个错误页面，展示该错误的详细信息。</li>
+<li>单个错误页面，将在后面单独进行介绍。</li>
 </ul>
+
+<p><strong>单个错误：</strong><br></p>
+
+<p>单个错误页面，展示该错误的 URL、第一次发生时间、最后一次发生时间、 错误发生次数、监测到错误的 agent 名称、错误信息、请求参数和堆栈信息。
+<img src="/images/aimonitor_eventerror02.png" alt="Aimonitor eventerror02" /></p>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
