--- a/event/event_performanceProfiling.html
+++ b/event/event_performanceProfiling.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_event book_event_event_performanceProfiling">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,38 +441,48 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>应用&gt;tier&gt;性能剖析</h1>
 
-<h4>开始使用 Application Insight</h4>
-
-<ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
-</ul>
-
-<p><strong>登陆</strong><br></p>
+<p><strong>1.性能剖析</strong></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
-</ul>
-
-<p><strong>初次使用</strong><br></p>
+<li>Ai 的性能剖析,可以在不影响用户体验的情况下,监控和记录特定时间内执行的线程。</li>
+<li>性能剖析是一个低强度分析工具,可以用在生产应用程序中识别瓶颈。它是在指定的时间内定期的抓取每个线程的堆栈信息进行聚合形成调用栈。当然我们的调用栈信息并不是记性全量的抓取，但是这足以展现应用程序的性能情况。通过调用栈的信息，我们可以清楚的看到时间是花费在哪里。</li>
+<li>我们的Ai产品中有两种方法可以进行性能剖析的设置：
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>1.应用&gt;Tier&gt;性能剖析</li>
+<li>2.关键事务&gt;性能剖析</li>
+</ul></li>
 </ul>
+
+<p><strong>注意：</strong> 性能剖析进行时必须确保剖析的探针具有持续的访问。</p>
+
+<p><strong>应用&gt;Tier&gt;性能剖析</strong></p>
+
+<ul>
+<li>针对单个实例，进行线程的抓取。</li>
+</ul>
+
+<p><strong>默认设置：</strong></p>
+
+<ul>
+<li>1.持续时间：2min。<br></li>
+<li>2.采样周期：100ms。</li>
+<li>3.可以根据需要进行调整。</li>
+</ul>
+
+<p><img src="/images/ps01.png" alt="Ps01" /></p>
+
+<p><strong>剖析页面：</strong></p>
+
+<ul>
+<li>剖析页面即线程分析页面，其中包含性能剖析的开始时间、采样周期、采样次数、采样人以及调用栈信息。</li>
+<li>调用栈信息可以根据需要进行展开和收缩。</li>
+<li>此处的百分比是根据在采样周期中,该行代码总计被采样到的次数与总采样次数的百分比。代码后括号中的内容是该代码在事务中的行数。</li>
+</ul>
+
+<p><img src="/images/ps02.png" alt="Ps02" /></p>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
