--- a/keyTransaction/keyTransaction_overview.html
+++ b/keyTransaction/keyTransaction_overview.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_keyTransaction book_keyTransaction_keyTransaction_overview">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,54 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>关键事务－总览</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p>点击单个关键事务，会跳转到该关键事务的总览页面。该页面主要包括响 应时间图、Apdex 图、吞吐量图、Traces 列表、错误率图、报警列表这 6 个部分。</p>
+
+<p><strong>响应时间的四维展示：</strong><br></p>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>以堆叠面积图的方式，展示了该关键事务的各个组件的响应时间随时间的变化情况。<br></li>
+<li>点击图下方的四个维度，可以在“展示或隐藏相应组件的数据”间进行切换。<br></li>
+<li>堆叠面积图的优势在于，用户可以直接清晰的看出响应时间较长的组件，然后针对该组件排查是否出现性能问题。帮助用户把注意力集中在最可能出现性能问题的地方。<br></li>
+<li>通过隐藏某些维度，可以实现组件间的数据对比，或者单个组件的数据“无噪音”展示。<br>
+<img src="/images/aikeytransaction_over01.png" alt="Aikeytransaction over01" /></li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p><strong>Apdex 图：</strong><br></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>Apdex 图展示了该关键事务的 Apdex 值随时间的变化情况。
+<img src="/images/aikeytransaction_over02.png" alt="Aikeytransaction over02" /></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>吞吐量图：</strong><br></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>吞吐量图展示了该关键事务的吞吐量随时间的变化情况。</li>
+</ul>
+
+<p>介绍了关键事务的响应时间图、Apdex 图、吞吐量图这 3 个图表，下面将介绍 Traces 列表、错误率图、报警列表这 3 个图表。</p>
+
+<p><strong>Traces 列表：</strong><br></p>
+
+<ul>
+<li>当该关键事务的性能超过其设定的阈值时，Ai 对其进行记录，将当时数据信息保存为一条 trace。<br></li>
+<li>Traces 列表展示了在时间选择器的选定时间内，该关键事务的所有 Tace 记录。点击单条 trace，跳转到“监控-Web 事务-单条慢事务追踪”页面下，展示该条 trace 的详细信息。<br></li>
+<li>“关键事务的 trace”与“Web 事务的慢事务追踪”是同一功能。命名不同，只是为了区别关键事务和普通的 Web 事务。<br>
+<img src="/images/aikeytransaction_over03.png" alt="Aikeytransaction over03" /></li>
+</ul>
+
+<p><strong>错误率图：</strong><br></p>
+
+<ul>
+<li>错误率图展示了该关键事务的错误率随时间的变化情况。</li>
+</ul>
+
+<p><strong>报警列表：</strong><br></p>
+
+<ul>
+<li>报警列表展示了该关键事务的各类报警记录。</li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
