--- a/keyTransaction/keyTransaction_performanceprofiling.html
+++ b/keyTransaction/keyTransaction_performanceprofiling.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_keyTransaction book_keyTransaction_keyTransaction_performanceprofiling">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,38 +441,78 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>关键事务&gt;性能剖析</h1>
 
-<h4>开始使用 Application Insight</h4>
-
-<ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
-</ul>
-
-<p><strong>登陆</strong><br></p>
+<p><strong>1.关键事务&gt;性能剖析</strong></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>抓取的结果是应用&gt; Tier &gt;性能剖析的一个子集。针对的是选定探针对应的关键事务进行线程的抓取。</li>
+<li>对于某个关键事务来说只能同时进行一个性能剖析，如果想要创建一个新的性能剖析则需要将正在进行的性能剖析暂停或删除。</li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><img src="/images/p01.png" alt="P01" /></p>
+
+<p><strong>2.默认设置：</strong></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>1.持续时间：60 min; 采样周期：1000 ms 。</li>
+<li>2.可以根据需要进行调整。</li>
 </ul>
+
+<p><strong>注：</strong>采样周期和持续时间只能在开始创建性能剖析时进行设定。</p>
+
+<p><img src="/images/p002.png" alt="P002" /></p>
+
+<p><strong>3.剖析页面：</strong></p>
+
+<ul>
+<li>关键事务的新能剖析由总览和线程分析和性能剖析信息（对应的关键事务和应用名称，开始时间、状态和采样次数）。</li>
+</ul>
+
+<p><img src="/images/p02.png" alt="P02" /></p>
+
+<ul>
+<li>总览页面展示了抓取到的全部的 trace 数据以及 trace 响应时间分布，响应时间&amp;吞吐量，APP Server  Breakdown 和耗时最长的统计等图表。</li>
+<li>下面是可以进行深度链接操作的简要总结：</li>
+</ul>
+
+<table><thead>
+<tr>
+<th>序号</th>
+<th style="text-align: center">If You Want To &hellip;</th>
+<th style="text-align: right">Do This &hellip;</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>1</td>
+<td style="text-align: center">从不同的维度查看trace</td>
+<td style="text-align: right">点击耗时/开始时间</td>
+</tr>
+<tr>
+<td>2</td>
+<td style="text-align: center">查看单个 trace 的详细信息</td>
+<td style="text-align: right">点击选中的 trace</td>
+</tr>
+<tr>
+<td>3</td>
+<td style="text-align: center">查看性能剖析对应关键事务信息</td>
+<td style="text-align: right">选择关键事务下对应名称</td>
+</tr>
+<tr>
+<td>4</td>
+<td style="text-align: center">查看性能剖析对应的 tier 应用情况</td>
+<td style="text-align: right">选择应用程序下对应名称</td>
+</tr>
+</tbody></table>
+
+<ul>
+<li>线程分析页面<br></li>
+<li>调用栈信息可以根据需要进行展开和收缩。</li>
+<li>此处的百分比是根据在采样周期中,该行代码总计被采样到的次数与总采样次数的百分比。代码后括号中的内容是该代码在事务中的行数。</li>
+<li>停到某个类的某个方法比如 get 的方法,一般都是由于在进行密集计算,或者调用数据库但是数据库长时间没有返回结果,或者数据库中有锁。如果是 cpu 慢,就会出现在这里;如果由于锁等原因,就会出现在线程和锁的标签页中。</li>
+</ul>
+
+<p><img src="/images/p03.png" alt="P03" /></p>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
