--- a/monitor/monitor_bgTask.html
+++ b/monitor/monitor_bgTask.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_monitor book_monitor_monitor_bgTask">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,72 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>监控-后台任务</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p>该页面为后台任务页面，共由后台任务栏、Top5 后台任务的响应时间图、Top5 后台任务的吞吐量图、CPU 使用率图、内存使用情况图、慢后台任务追踪这 6 个部分组成。</p>
+
+<p><strong>首先，什么是后台任务?</strong></p>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>后台任务，是指应用在运行时不需要与用户交互的任务。它们通常在不打扰用户其它工作的时候静默执行。</li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p><strong>后台任务栏：</strong></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>后台任务栏展示当前应用的所有后台任务。<br></li>
+<li>后台任务栏可以按照“平均响应时间从长到短”、“性能指数从小到大”、“吞吐量从高到低”、“响应时间占比从 高到低”来进行排序。<br></li>
+<li>点击单个后台任务，可以打开单个后台任务的页面。单个外部服务页面，展示了当前后台任务的详细信息。<br></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>Top5 后台任务响应时间图：</strong></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>以面积图的方式，展示了平均响应时间最长的 5 个后台任务，其响应时间随时间的变化情况。</li>
+</ul>
+
+<p><img src="/images/aimonitor_bgTask01.png" alt="Aimonitor bgtask01" /></p>
+
+<p><strong>Top5 后台任务吞吐量图：</strong></p>
+
+<ul>
+<li><p>以折线图的方式，展示了平均响应时间最长的 5 个后台任务，其吞吐量随时间的变化情况。</p></li>
+<li><p>介绍了后台任务栏、Top5 后台任务的响应时间图、Top5 后台任务的吞吐量图这 3 个部分，下面将介绍 CPU 使用率图、内存使用情况图、慢后台任务追踪列表这 3 个部分。</p></li>
+</ul>
+
+<p><strong>CPU 使用率图：</strong></p>
+
+<ul>
+<li>以折线图的方式，展示了该应用所在的应用服务器，其 CPU 使用率随时间的变化情况。</li>
+</ul>
+
+<p><strong>内存使用情况图：</strong></p>
+
+<ul>
+<li>以折线图的方式，展示了该应用所在的应用服务器，其内存使用随时间的变化情况。
+<img src="/images/aimonitor_bgtask002.png" alt="Aimonitor bgtask002" /></li>
+</ul>
+
+<p><strong>慢后台任务追踪列表：</strong></p>
+
+<ul>
+<li>该列表展示了后台任务发生响应时间超出阈值时，相应后台任务的追踪记录。<br></li>
+<li>点击单条追踪记录，查看该条记录的详细信息。<br></li>
+<li>单条慢后台任务追踪记录页面，将在后面单独进行介绍。<br></li>
+</ul>
+
+<p><strong>单个后台任务</strong></p>
+
+<ul>
+<li>点击单个后台任务，展示当前的后台任务的详细信息，分别为执行时间图、 吞吐量图、崩溃列表和慢后台任务追踪列表。（与单个 Web 事务的展示图表基 本一致，只是数据不同，故此处不再赘述。）</li>
+</ul>
+
+<p><img src="/images/aimonitor_bgtask004.png" alt="Aimonitor bgtask004" /></p>
+
+<p><strong>单条慢后台任务追踪</strong></p>
+
+<ul>
+<li>点击单条慢后台任务追踪，展示当前的慢后台任务追踪记录的详细信息，分别为执行时间图、吞吐量图、崩溃列表和慢后台任务追踪列表。（与单条慢事务追踪的展示基本一致，只是数据不同，故此处同样不再赘述。）</li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
