--- a/monitor/monitor_dataBase.html
+++ b/monitor/monitor_dataBase.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_monitor book_monitor_monitor_dataBase">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,38 +441,79 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>监控-数据库</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p>该页面为数据库页面，共由 SQL 语句栏、Top5 SQL 语句响应时间图、Top5
+SQL 语句吞吐量图这 3 个部分组成。</p>
 
-<ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
-</ul>
-
-<p><strong>登陆</strong><br></p>
+<p>SQL 语句栏：</p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>SQL 语句栏展示当前应用的所有 SQL 语句。<br></li>
+<li>在此栏头部，通过下拉列表选择数据库类型，包括“All、数据库类型选择栏：在 SQL 语句栏的头部，有一个下拉列表栏，勇于选择数据库类型。<br> 通过下拉列表，可以选择数据库类型，包括“All、Database、选择 Database，则展示数据库的相关信息，同时会增加展示“增、 删、改、查”4 类 SQL 语句的响应时间和吞吐量图; Database、MongoDB、Redis、Memcache(d)”5 项。<br></li>
+<li>SQL 语句栏可以按照“总响应时间从长到短”、“平均响应时间从长到短”、“吞吐量从高到低”来进行排序。<br></li>
+<li>点击单条 SQL 语句，可以打开单个 SQL 语句页面。单个SQL 语句页面，展示了当前 SQL 语句的详细信息。<br></li>
+<li>单个 SQL 语句页面，将在后面单独作为一部分进行介绍。<br></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p>Top5 SQL 语句响应时间图：</p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>以面积图的方式，展示了平均响应时间最长的 5 条 SQL 语句，其响应时间随时间的变化情况。</li>
 </ul>
+
+<p><img src="/images/aimonitor_database01.png" alt="Aimonitor database01" /></p>
+
+<ul>
+<li><p>数据库类型选择栏：</p></li>
+<li><p>在 SQL 语句栏的头部，有一个下拉列表栏，用于选择数据库类型。 通过下拉列表，可以选择数据库类型，包括 “ All、Database、MongoDB、Redis、Memcache（d） ” 5 项——选择 All，则展示所有数据库类型的整体情况;选择 Database，则展示数据库的相关信息，同时会增加展示“增、 删、改、查”4 类 SQL 语句的响应时间和吞吐量图   ；选择 MongoDB、Redis、Mencache（d），同样会相应展示其详细信息。</p></li>
+</ul>
+
+<p>Top5 SQL 语句吞吐量图：</p>
+
+<ul>
+<li>以折线图的方式，展示了平均响应时间最长的 5 条 SQL 语句，其吞吐量随时间的变化情况。</li>
+</ul>
+
+<p><strong>单条 SQL 语句</strong></p>
+
+<ul>
+<li>点击单条 SQL 语句，展示当前 SQL 语句的详细信息，分别为响应时间和吞吐量图、调用者时间占比图和调用事务列表、慢 SQL 追踪列表。</li>
+</ul>
+
+<p>响应时间和吞吐量图：</p>
+
+<ul>
+<li>展示当前 SQL 语句的响应时间和吞吐量随时间的变 化情况。<br></li>
+<li>用折线图展示响应时间，用柱状图展示吞吐量。<br></li>
+<li>分别用不同的方式展示不同的数据，有效地对数据进行比对，让用户分析数据更加方便。<br></li>
+</ul>
+
+<p>调用者时间占比图、调用事务列表：<br></p>
+
+<ul>
+<li>在该条 SQL 被调用的总耗时中，各个事务调用当前 SQL 的耗时，在总耗时中所占的百分比。该指标被称为“调用者时间占比”。<br></li>
+<li>调用事务列表，展示了调用该条 SQL 语句的各个事务，以及事务的相关信息，包括响应时间占比、平均响应时间、 吞吐量。<br></li>
+<li>横置柱状面积图，可以更加直观地展示出百分比。<br></li>
+</ul>
+
+<p><img src="/images/aimonitor_database02.png" alt="Aimonitor database02" /></p>
+
+<p>慢 SQL 追踪列表：</p>
+
+<ul>
+<li>该列表展示了当前 SQL 语句发生响应时间超出阈值时，相应 SQL 语句的追踪记录。<br></li>
+<li>点击单条追踪记录，查看该条记录的详细信息。<br></li>
+<li>单条追踪记录页面，将在后面单独进行介绍。<br></li>
+</ul>
+
+<p><strong>单条慢 SQL 追踪</strong></p>
+
+<ul>
+<li>点击单条慢 SQL 追踪记录，会展示当前慢 SQL 追踪记录的详细信息，分别为记录时间、平均执行时长、执行次数、执行时间范围;同时，还展示出该 条 SQL 语句的内容（Ai 会自动隐藏 SQL 语句中的敏感信息）。对于一些明显高于阈值的 SQL 语句，还会展示出其执行计划，以及调用该语句的堆栈信息，方便用户排查数据库调用的问题。</li>
+</ul>
+
+<p><img src="/images/aimonitor_database04.png" alt="Aimonitor database04" /></p>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
