--- a/monitor/monitor_external.html
+++ b/monitor/monitor_external.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_monitor book_monitor_monitor_external">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,62 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>监控-外部服务</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p>该页面为外部服务页面，共由外部服务栏、Top5 外部服务的响应时间图、
+Top5 外部服务的吞吐量图这 3 个部分组成。</p>
+
+<p><strong>首先，什么是外部服务?</strong></p>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>外部服务，是指应用在运行时所调用的其他外部应用提供的服务，通常由第三方通过 API 提供，使调用者可以使用第三方提供的相应服务。</li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p><strong>外部服务栏：</strong></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>外部服务栏展示当前应用所调用的所有外部服务。<br></li>
+<li>外部服务栏可以按照“平均响应时间从长到短”、“吞吐量从高到低”来进行排序。<br></li>
+<li>点击单个外部服务，可以打开单个外部服务的页面。单个外部服务页面，展示了当前 SQL 语句的详细信息。<br></li>
+<li>单个外部服务页面，将在后面单独作为一部分进行介绍。<br></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>Top5 外部服务响应时间图：</strong></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>以面积图的方式，展示了平均响应时间最长的 5 个外部服务，其响应时间随时间的变化情况。</li>
+</ul>
+
+<p><img src="/images/aimonitor_external01.png" alt="Aimonitor external01" /></p>
+
+<p>Top5 外部服务吞吐量图：</p>
+
+<ul>
+<li>以折线图的方式，展示了平均响应时间最长的 5 个外部服务，其吞吐量随时间的变化情况。</li>
+</ul>
+
+<p><strong>单个外部服务</strong></p>
+
+<ul>
+<li>点击单个外部服务，展示当前外部服务的详细信息，分别为响应时间和吞吐量图、调用者时间占比图和调用事务列表。</li>
+</ul>
+
+<p>响应时间和吞吐量图：</p>
+
+<ul>
+<li>展示当前外部服务的响应时间和吞吐量随时间的变化情况。<br></li>
+<li>用折线图展示响应时间，用柱状图展示吞吐量。<br></li>
+<li>分别用不同的方式展示不同的数据，有效地对数据进行比对，让用户分析数据更加方便。</li>
+</ul>
+
+<p><img src="/images/aimonitor_external002.png" alt="Aimonitor external002" /></p>
+
+<p><strong>调用者时间占比图、调用事务列表：</strong></p>
+
+<ul>
+<li>在该外部服务被调用的总耗时中，各个事务调用当前外部服务的耗时，在总耗时中所占的百分比。该指标被称为“调用者时间占比”。<br></li>
+<li>调用事务列表，展示了调用该外部服务的各个事务，以及事务的相关信息，包括响应时间占比、平均响应时间、吞吐量。<br></li>
+<li>横置柱状面积图，可以更加直观地展示出百分比。<br></li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
