--- a/monitor/monitor_jvm.html
+++ b/monitor/monitor_jvm.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_monitor book_monitor_monitor_jvm">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,124 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>监控-JVM</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p><strong>首先，为什么该功能模块有适用范围?</strong><br></p>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>因为不同语言应用的运行环境有很大差异，所以该功能模块并不对所有应 用都有效。针对 Java 应用，该模块有效，并且名称为 JVMs;针对 Ruby 应用，该功能模块同样有效，并且名称为 RubyVM。针对其他语言的应用，该功能模块无法使用，所以 Ai 隐藏了相应模块，避免给用户造成误导。<br></li>
+<li>此处以 Java 应用的 JVMs 页面为例，展开相应的介绍。JVMs 页面共由 内存、线程、会话这 3 个部分组成。而不同的部分，都通过若干个图表，展示了应用的相关信息。<br></li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p><strong>然而，什么是 JVM?</strong><br></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>JVM，英文全称为 Java Virtual Machine，是指 Java 虚拟机。<br></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>第 1 部分——内存</strong><br></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>在内存页面下，展示了 JVM 的内存、垃圾收集、类加载的相关信息。</li>
+</ul>
+
+<p><strong>然而，什么是 JVM 内存?</strong><br></p>
+
+<ul>
+<li>关于 JVM 内存的解如图：</li>
+</ul>
+
+<p><img src="/images/aimonitor_jvms001.png" alt="Aimonitor jvms001" /></p>
+
+<p><strong>第 2 部分——线程</strong><br></p>
+
+<ul>
+<li>在线程页面下，展示了 JVM 的线程数目随时间的变化情况，同时展示了各个线程池的 Max、Active、Idle 线程数目随时间的变化情况。<br></li>
+</ul>
+
+<p><strong>然而，什么是 JVM 线程?</strong><br></p>
+
+<ul>
+<li>关于 JVM 线程的解释，详见“术语解释-JVM” 线程。
+<img src="/images/aimonitor_jvms03.png" alt="Aimonitor jvms03" /></li>
+</ul>
+
+<p><strong>第 3 部分——会话</strong><br></p>
+
+<ul>
+<li>在会话页面，展示出该应用在运行时建立的各个会话的相关信息。</li>
+</ul>
+
+<p><strong>然而，什么是会话?</strong><br></p>
+
+<ul>
+<li>会话 (Session) 是指服务器与浏览器的建立的连接。关于会话的解释，详见 JVM 监控详细解释 - 会话。
+<img src="/images/aimonitor_jvms04.png" alt="Aimonitor jvms04" /></li>
+</ul>
+
+<h1>JVM 监控详细解释</h1>
+
+<p><strong>1.Java 内存</strong></p>
+
+<ul>
+<li><p>Java 的内存通常分为堆内存和非堆内存，堆内存由 Java 对象使用，非堆内存 则用于存放 JNI、Java 线程对象等非 Java 数据。示意图如下所示：
+<img src="/images/jvm-01.png" alt="Jvm 01" /></p></li>
+<li><p>堆内存结构如下所示：
+<img src="/images/jvm-02.png" alt="Jvm 02" /></p></li>
+<li><p>垃圾收集（Garbage collection）</p></li>
+<li><p>JVM Generational Collecting（分代）原理是这样的：把对象分为年青代（Young）、 年老代（Tenured）、持久代（Perm），对不同生命周期的对象使用不同的算法。（基于对对象生命周期分析）
+<img src="/images/jvm-03.png" alt="Jvm 03" /></p></li>
+<li><p>如上图所示，为 Java 堆中的各代分布：</p></li>
+<li><p><strong>1 Young（年轻代）</strong></p>
+
+<ul>
+<li>年轻代分三个区。一个 Eden 区，两个 Survivor 区。大部分对象在 Eden 区 中生成。幸存者 0 区（Survivor 0 space）和幸存者 1 区（Survivor1 space）： 当伊甸园的空间用完时，程序又需要创建对象;此时 JVM 的垃圾回收器将对 伊甸园区进行垃圾回收，将伊甸园区中的不再被其他对象所引用的对象进行销
+毁工作。同时将伊甸园中的还有其他对象引用的对象移动到幸存者 0 区。幸 存者 0 区就是用于存放伊甸园垃圾回收时所幸存下来的 JAVA 对象。当将伊 甸园中的还有其他对象引用的对象移动到幸存者 0 区时，如果幸存者 0 区也 没有空间来存放这些对象时，JVM 的垃圾回收器将对幸存者 0 区进行垃圾回 收处理，将幸存者 0 区中不在有其他对象引用的 JAVA 对象进行销毁，将幸存者 0 区中还有其他对象引用的对象移动到幸存者 1 区。幸存者 1 区的作 用就是用于存放幸存者 0 区垃圾回收处理所幸存下来的 JAVA 对象。</li>
+</ul></li>
+<li><p><strong>2 Tenured（年老代）</strong></p>
+
+<ul>
+<li>年老代存放从年轻代存活的对象。一般来说年老代存放的都是生命期较长的对象。</li>
+</ul></li>
+<li><p><strong>3 Perm（持久代）</strong></p>
+
+<ul>
+<li>用于存放静态文件，如今 Java 类、方法等。持久代对垃圾回收没有显著影响，但是有些应用可能动态生成或者调用一些 class，例如 Hibernate 等，在这种时候需要设置一个比较大的持久代空间来存放这些运行过程中新增的类。持久代大小通过-XX：MaxPermSize= 进行设置。</li>
+<li>举个例子：当在程序中生成对象时，正常对象会在年轻代中分配空间，如果是过大的对象也可能会直接在年老代生成（据观测在运行某程序时候每次会生成 一个十兆的 空间用收发消息，这部分内存就会直接在年老代分配）。年轻代 在空间被分配完的时候就会发起内存回收，大部分内存会被回收，一部分幸存 的内存会被拷贝至 Survivor 的 from 区，经过多次回收以后如果 from 区内存 也分配完毕，就会也发生内存回收然后将剩余的对象拷贝至 to 区。等到 to 区 也满的时候，就会再次发生内存回收然后把幸存的对象拷贝至年老区。
+通常我们说的 JVM 内存回收总是在指堆内存回收，确实只有堆中的内容是动态申请分配的，所以以上对象的年轻代和年老代都是指的 JVM 的 Heap 空间，而持久代则是之前提到的 Method Area，不属于 Heap。</li>
+</ul></li>
+<li><p><strong>Class count</strong></p></li>
+<li><p>Java 的运行时架构图如下：
+<img src="/images/jvm-04.png" alt="Jvm 04" /></p></li>
+<li><p>JVM 主要包括两个子系统和两个组件。两个子系统分别是 Class loader 子系统和 Execution engine（执行引擎）子系统; 两个组件分别是 Runtime data area （运行时数据区域）组件和 Native interface（本地接口）组件。</p></li>
+<li><p>Class loader 子系统的作用：根据给定的全限定名类名（如 java.lang.Object）来装载 class 文件的内容到 Runtime data area 中的 method area（方法区域）。Java 程序员可以 extends java.lang.ClassLoader 类来写自己的 Class loader。 Execution engine 子系统的作用：执行 classes 中的指令。任何 JVM specification 实现（JDK）的核心都是 Execution engine，不同的 JDK 例如 Sun 的 JDK 和 IBM 的 JDK 不同主要就取决于他们各自实现的 Execution engine 的不同。
+Native interface 组件：与 native libraries 交互，是其它编程语言交互的接口。 当调用 native 方法的时候，就进入了一个全新的并且不再受虚拟机限制的世界，所以也很容易出现 JVM 无法控制的 native heap OutOfMemory。</p></li>
+<li><p>Runtime Data Area 组件：这就是通常所说的 JVM 的内存了。它主要分为五个部分：</p>
+
+<ul>
+<li>1 Heap （堆）：一个 Java 虚拟实例中只存在一个堆空间。</li>
+<li>2 Method Area（方法区域）：被装载的 class 的信息存储在 Method area 的内存中。当虚拟机装载某个类型时，它使用类装载器定位相应的 class 文件，然后读入这个 class 文件内容并把它传输到虚拟机中。</li>
+<li>3 Java Stack（java 的栈）：虚拟机只会直接对 Java stack 执行两种操作：以帧为单位的压栈或出栈。</li>
+<li>4 Program Counter（程序计数器）：每一个线程都有它自己的 PC 寄存器，也是该线程启动时创建的。PC 寄存器的内容总是指向下一条将被执行指令的地址，这里的地址可以是一个本地指针，也可以是在方法区中相对应于该方法起始指令的偏移量。</li>
+<li>5 Native method stack（本地方法栈）：保存 native 方法进入区域的地址。</li>
+</ul></li>
+</ul>
+
+<p><strong>2.线程</strong></p>
+
+<ul>
+<li><p>线程，是程序运行的基本执行单元。当操作系统（不包括单线程的操作系统，如微软早期的 DOS）在执行一个程序时，会在系统中建立一个进程，而在这个进程中，必须至少建立一个线程（这个线程被称为主线程）来作为这个程序运行的入口点。因此，在操作系统中运行的任何程序都至少有一个主线程。</p></li>
+<li><p>进程和线程是现代操作系统中两个必不可少的运行模型。在操作系统中可以有多个进程，这些进程包括系统进程（由操作系统内部建立的进程）和用户进程（由用户程序建立的进程）;一个进程中可以有一个或多个线程。进程和进程之间不共享内存，也就是说系统中的进程是在各自独立的内存空间中运行的。而一个进程中的线可以共享系统分派给这个进程的内存空间。</p></li>
+<li><p>线程不仅可以共享进程的内存，而且还拥有一个属于自己的内存空间，这段内存空间也叫做线程栈，是在建立线程时由系统分配的，主要用来保存线程内部所使用的数据，如线程执行函数中所定义的变量。在操作系统将进程分成多个线程后，这些线程可以在操作系统的管理下并发执行，从而大大提高了程序的运行效率。</p></li>
+</ul>
+
+<p><strong>3.会话</strong></p>
+
+<ul>
+<li><p>会话（Session）的定义根据场景而有所不同：在 web 应用的用户看来，他打开浏览器访问一个电子商务网站，登录、并完成购物直到关闭浏览器，这是一个会话。</p></li>
+<li><p>而在 web 应用的开发者开来，用户登录时，需要创建一个数据结构以存储用户的登录信息，这个结构也是一个会话。
+会话，是用于解决 HTTP 协议自身无状态的方式之一，通过记录状态并将状态数据保存在服务端以实现。</p></li>
+<li><p>会话的典型应用场景，是用户登录某网站之后，将其登录信息放入会话，在以后的每次请求中，查询相应的登录信息以确保该用户合法;还有购物车等等经典场景。</p></li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
