--- a/monitor/monitor_map.html
+++ b/monitor/monitor_map.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_monitor book_monitor_monitor_map">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,42 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
+            <h1>监控-拓扑</h1>
 
-<h4>开始使用 Application Insight</h4>
+<p><strong>该页面为拓扑图页面，如下图：</strong><br>
+<img src="/images/aimonitor_map.png" alt="Aimonitor map" /></p>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>Ai 通过拓扑图来展示应用的端到端调用关系、应用服务器与数据库、外部服务的调用关系以及应用之间的调用关系。同时，通过在拓扑图中将相应模块标记成不同颜色（灰色代表无数据;红色代表不满意;黄色代表一般;绿色代表满意），让用户能够直观了解应用运行期间、各个环节的健康状况。</li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p><strong>应用程序：</strong></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li>拓扑图中，能够展示出应用程序之间的调用关系，但最多只能展示两级。<br></li>
+<li>点击应用程序图标，会弹出窗口，展示应用的响应时间、吞吐量、 错误率（吞吐量和错误率都会展示总数和每分钟数目）。<br></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>用户终端：</strong></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>用户终端是发出 http 请求的起点，即事务的起点。<br></li>
+<li>点击用户终端图标，会弹出窗口，提供“查看”链接。再次点击，会跳转到 BI 产品的当前应用中。<br></li>
+<li>Bi 是 OneAPM 专为用户的“浏览器终端性能监控”而生的一款产品。与 Ai 一同使用，可以更好实现端到端的完整流程监控。<br></li>
+</ul>
+
+<p><strong>外部服务：</strong></p>
+
+<ul>
+<li>外部服务调用，即应用程序调用第三方提供的 API 并获得相应数据、服务的过程。<br></li>
+<li>点击外部服务图标，会弹出窗口，展示外部服务的服务器名称、平均响应时间、调用次数和每分钟调用次数。<br></li>
+</ul>
+
+<p><strong>数据库：</strong></p>
+
+<ul>
+<li>数据库调用，即应用程序对数据库进行增、删、改、查操作的过程。<br></li>
+<li>点击数据库图标，会弹出窗口，展示数据库操作的名称、平均响应时间、调用次数和每分钟调用次数。<br></li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
