--- a/systemSet/account.html
+++ b/systemSet/account.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-book book_index">
+  <body class="page-book book_systemSet book_systemSet_account">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -441,37 +441,25 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>开始使用</h1>
-
-<h4>开始使用 Application Insight</h4>
+            <h1>账号管理</h1>
 
 <ul>
-<li>OneAPM Ai，全名为 OneAPM Application Insight，是 OneAPM 为企业级用 户精心打造的应用性能管理（Application Performance Management）产品，如 下图所示。
-<img src="/images/ai_index.png" alt="Ai index" /></li>
+<li>账号管理页面，主要有账号列表、添加账号按钮这 2 个部分。</li>
 </ul>
 
-<p><strong>登陆</strong><br></p>
+<p><strong>账号列表：</strong></p>
 
 <ul>
-<li><p>访问 <a href="https://www.oneapm.com">OneAPM 登录页面</a> ，输入已注册的 OneAPM 账号，进入 OneAPM 主页面。<br></p></li>
-<li><p>若尚未注册 OneAPM 账号，请<a href="https://user.oneapm.com/account/register.do">注册 OneAPM 账号</a>后，开始使用。<br>
-默认进入控制台页面，点击 Application Insight 进入操作页面。
-<img src="/images/ai_index02.png" alt="Ai index02" /></p></li>
+<li><p>在账号列表中，展示出了系统涉及的各个账号的相关信息，包括用户名、邮箱、手机号。点击编辑，可以修改用户信息;点击删除，删除该帐号。</p></li>
+<li><p>当 Ai 发送报警邮件和短信时，会发送到用户在报警策略中选择的账号。所以用户需要为每一个相关人员创建账号，以便相关人员及时收到报警信息。
+<img src="/images/aisystem_accountmanage00.png" alt="Aisystem accountmanage00" /></p></li>
 </ul>
 
-<p><strong>初次使用</strong><br></p>
+<p><strong>点击“添加”，可以增加用户账号。</strong><br></p>
 
 <ul>
-<li><p>初次使用 Application Insight 时，由于您尚未在您的AI产品中添加应用，首先会让您选择需要监控的对应平台应用，这里以 Java 应用为例，如图所示：<br>
-<img src="/images/ai_index03.png" alt="Ai index03" /></p></li>
-<li><p>当我们选中 Java 的图标后会看到，如图：
-<img src="/images/ai_index04.png" alt="Ai index04" /></p></li>
-<li><p>通过上面图中指示方式，（以 Tomcat 为例）下载 Agent 后放置到并成功部署在应用服务器根目录后如图：
-<img src="/images/ai_index06.png" alt="Ai index06" /></p></li>
-<li><p>注意：以上操作后，必须配置 license_key 到 /OneAPM/oneapm.properties 文件中，然后重启应用服务器；
-2 分钟后，再次登陆 OneAPM 后会看到如图:<br>
-<img src="/images/ai_index05.png" alt="Ai index05" /></p></li>
-<li><p>看到上图，就说明您已经成功监控到应用的性能数据，接下来开始您的 OneAPM 性能优化之旅吧！！！</p></li>
+<li>增加用户方式如图：
+<img src="/images/aisystem_accountmanage02.png" alt="Aisystem accountmanage02" /></li>
 </ul>
 
             <!--<hr style="margin-top: 50px;" />
