--- a/agent/nodejs/Nodejsinstall.html
+++ b/agent/nodejs/Nodejsinstall.html
@@ -523,7 +523,7 @@
 <p>1.下载 OneAPM Nodejs Agent</p>
 
 <p>下载 OneAPM Nodejs Agent 安装程序到所在项目的文件夹下或者使用</p>
-<pre class="highlight plaintext"><code>wget https://user.oneapm.com/account/70895d373d2c0424a381b90a574630b8/agent/
+<pre class="highlight plaintext"><code>wget https://user.oneapm.com/account/&lt;The-string-associated-with-your-account&gt;/agent/
 node/OneAPM_node_Agent_latest.tgz
 </code></pre>
 <p>2.安装 OneAPM Nodejs Agent</p>
