--- a/qa/java/automatic-application-naming.html
+++ b/qa/java/automatic-application-naming.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-qa qa_ruby qa_ruby_ruby_index">
+  <body class="page-qa qa_java qa_java_automatic-application-naming">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -444,11 +444,76 @@
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>Ruby 常见问题</h1>
+            <h1>应用程序自动命名如何配置</h1>
+
+<p>当配置文件中的 <code>enable_auto_app_naming</code> 配置开启后，探针会自动获取每个应用的名称。获取的方式有六种：</p>
 
 <ul>
-      <li><a href="/qa/ruby/Ruby.html">Ruby Agent 安装常见问题及解决办法</a></li>
+<li>调用 <code>request.setAttribute(&quot;com.blueware.monitor.APPLICATION_NAME&quot;, MySpecialWebApp&quot;)</code>;</li>
+<li><code>web.xml</code> 中配置 <code>servlet init param</code></li>
+<li><code>web.xml</code> 中配置 <code>Filter init param</code></li>
+<li><code>web.xml</code> 中配置 <code>context param</code></li>
+<li><code>web.xml</code> 中配置 <code>appName</code>（标签名：<code>display-name</code>）</li>
+<li>自动获取 <code>ServletContentPath</code>（一般表现为 URL 中项目名称）</li>
 </ul>
+
+<p>列表中的配置生效有优先级的控制，由上到下级别递减。</p>
+
+<h3>1. Request attribute</h3>
+
+<p>优先级最高的配置方式，应该尽量在 <code>transaction</code> 最早的时间配置 <code>app_name</code>
+<strong>Note</strong>：只针对 <code>servlet request</code> 生效</p>
+<pre class="highlight java"><code><span class="kd">protected</span> <span class="kt">void</span> <span class="nf">doGet</span><span class="o">(</span><span class="n">HttpServletRequest</span> <span class="n">request</span><span class="o">,</span> <span class="n">HttpServletResponse</span> <span class="n">response</span><span class="o">)</span> <span class="kd">throws</span> <span class="n">ServletException</span><span class="o">,</span> <span class="n">IOException</span> <span class="o">{</span>
+ <span class="o">...</span>
+ <span class="n">String</span> <span class="n">requestUri</span> <span class="o">=</span> <span class="n">httpServletRequest</span><span class="o">.</span><span class="na">getRequestURI</span><span class="o">();</span> 
+ <span class="k">if</span> <span class="o">(</span><span class="n">requestUri</span><span class="o">.</span><span class="na">startsWith</span><span class="o">(</span><span class="s">"/my-special-request/"</span><span class="o">)){</span>
+     <span class="n">request</span><span class="o">.</span><span class="na">setAttribute</span><span class="o">(</span><span class="s">"com.blueware.monitor.APPLICATION_NAME"</span><span class="o">,</span> <span class="s">"MySpecialWebApp"</span><span class="o">);</span>
+ <span class="o">}</span> <span class="o">...</span>
+</code></pre>
+<h3>2. Servlet context</h3>
+
+<p>如果访问了多个 <code>servlet</code>，最早执行结束的 <code>servlet</code> 的配置生效</p>
+<pre class="highlight java"><code><span class="o">&lt;</span><span class="n">servlet</span><span class="o">&gt;</span>
+ <span class="o">&lt;</span><span class="n">servlet</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span><span class="n">SqlServlet</span><span class="o">&lt;/</span><span class="n">servlet</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span>
+ <span class="o">&lt;</span><span class="n">servlet</span><span class="o">-</span><span class="kd">class</span><span class="err">&gt;</span><span class="nc">test</span><span class="o">.</span><span class="na">SqlServlet</span><span class="o">&lt;/</span><span class="n">servlet</span><span class="o">-</span><span class="kd">class</span><span class="err">&gt;</span>
+ <span class="err">&lt;</span><span class="nc">init</span><span class="o">-</span><span class="n">param</span><span class="o">&gt;</span>
+    <span class="o">&lt;</span><span class="n">param</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span><span class="n">com</span><span class="o">.</span><span class="na">blueware</span><span class="o">.</span><span class="na">monitor</span><span class="o">.</span><span class="na">APPLICATION_NAME</span><span class="o">&lt;/</span><span class="n">param</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span>
+    <span class="o">&lt;</span><span class="n">param</span><span class="o">-</span><span class="n">value</span><span class="o">&gt;</span><span class="n">MyServletApp</span><span class="o">&lt;/</span><span class="n">param</span><span class="o">-</span><span class="n">value</span><span class="o">&gt;</span>
+ <span class="o">&lt;/</span><span class="n">init</span><span class="o">-</span><span class="n">param</span><span class="o">&gt;</span>
+<span class="o">&lt;/</span><span class="n">servlet</span><span class="o">&gt;</span>
+</code></pre>
+<h3>3. Filter context</h3>
+
+<p>最早执行结束的 <code>filter</code> 的配置生效</p>
+<pre class="highlight java"><code><span class="o">&lt;</span><span class="n">filter</span><span class="o">&gt;</span> 
+ <span class="o">&lt;</span><span class="n">filter</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span><span class="n">SqlFilter</span><span class="o">&lt;/</span><span class="n">filter</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span> 
+ <span class="o">&lt;</span><span class="n">filter</span><span class="o">-</span><span class="kd">class</span><span class="err">&gt;</span><span class="nc">test</span><span class="o">.</span><span class="na">SqlFilter</span><span class="o">&lt;/</span><span class="n">filter</span><span class="o">-</span><span class="kd">class</span><span class="err">&gt;</span> 
+ <span class="err">&lt;</span><span class="nc">init</span><span class="o">-</span><span class="n">param</span><span class="o">&gt;</span> 
+    <span class="o">&lt;</span><span class="n">param</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span><span class="n">com</span><span class="o">.</span><span class="na">blueware</span><span class="o">.</span><span class="na">monitor</span><span class="o">.</span><span class="na">APPLICATION_NAME</span><span class="o">&lt;/</span><span class="n">param</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span> 
+    <span class="o">&lt;</span><span class="n">param</span><span class="o">-</span><span class="n">value</span><span class="o">&gt;</span><span class="n">MyFilterApp</span><span class="o">&lt;/</span><span class="n">param</span><span class="o">-</span><span class="n">value</span><span class="o">&gt;</span> 
+ <span class="o">&lt;/</span><span class="n">init</span><span class="o">-</span><span class="n">param</span><span class="o">&gt;</span> 
+<span class="o">&lt;/</span><span class="n">filter</span><span class="o">&gt;</span>
+</code></pre>
+<h3>4. Web context</h3>
+<pre class="highlight java"><code><span class="o">&lt;</span><span class="n">context</span><span class="o">-</span><span class="n">param</span><span class="o">&gt;</span>
+ <span class="o">&lt;</span><span class="n">param</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span><span class="n">com</span><span class="o">.</span><span class="na">blueware</span><span class="o">.</span><span class="na">monitor</span><span class="o">.</span><span class="na">APPLICATION_NAME</span><span class="o">&lt;/</span><span class="n">param</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span>
+ <span class="o">&lt;</span><span class="n">param</span><span class="o">-</span><span class="n">value</span><span class="o">&gt;</span><span class="n">MyWebApp</span><span class="o">&lt;/</span><span class="n">param</span><span class="o">-</span><span class="n">value</span><span class="o">&gt;</span> 
+<span class="o">&lt;/</span><span class="n">context</span><span class="o">-</span><span class="n">param</span><span class="o">&gt;</span>
+</code></pre>
+<h3>5. Display name</h3>
+<pre class="highlight java"><code><span class="o">&lt;</span><span class="n">display</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span><span class="n">MyWebApp</span><span class="o">&lt;/</span><span class="n">display</span><span class="o">-</span><span class="n">name</span><span class="o">&gt;</span>
+</code></pre>
+<h3>6. Context path</h3>
+
+<p>如果完整的一次请求地址，如 URL 为：<code>http://example.com/oneapm-axis2-ws/getWeather</code>:</p>
+
+<ul>
+<li>请求 URI 是 <strong>/oneapm-axis2-ws/getWeather</strong>.</li>
+<li>context path 是 <strong>/oneapm-axis2-ws</strong>.</li>
+<li>应用命名为 <strong>oneapm-axis2-ws</strong>.</li>
+</ul>
+
+<p>这种方式获取的 <strong>appName</strong> 不是百分百准确，如果应用程序部署在 <strong>ROOT</strong> 下，这种方式是不生效的。</p>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
