--- a/qa/net/collectmessage.html
+++ b/qa/net/collectmessage.html
@@ -339,6 +339,7 @@
           <li><a href="/qa/java/question_help.html">常见部署问题</a></li>
           <li><a href="/qa/java/inner-mesh_help.html">内网如何部署 OneAPM</a></li>
           <li><a href="/qa/java/extensions_help.html">OneAPM 拓展功能使用</a></li>
+          <li><a href="/qa/java/automatic-application-naming.html">应用程序自动命名如何配置</a></li>
         </ul>
       </div>
     </div>
