--- a/quick-start/bestpractice.html
+++ b/quick-start/bestpractice.html
@@ -223,7 +223,7 @@
 
   </head>
 
-  <body class="page-qa qa_ruby qa_ruby_ruby_index">
+  <body class="home">
       <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -328,127 +328,207 @@
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
-        <a href="/qa/java/java_index.html" role="button">
-          Java
+        <a href="/quick-start/" role="button">
+          术语解释
         </a>
       </h4>
     </div>
-     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
         <ul>
-          <li><a href="/qa/java/question_help.html">常见部署问题</a></li>
-          <li><a href="/qa/java/inner-mesh_help.html">内网如何部署 OneAPM</a></li>
-          <li><a href="/qa/java/extensions_help.html">OneAPM 拓展功能使用</a></li>
-          <li><a href="/qa/java/automatic-application-naming.html">应用程序自动命名如何配置</a></li>
+          <li><a href="/quick-start/readme.html">常用术语</a></li>
+          <li><a href="/quick-start/dr.html">Data Retention</a></li>
         </ul>
       </div>
     </div>
-    <!--<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">-->
-      <!--<div class="panel-body">-->
-        <!--<ul>-->
-        <!--</ul>-->
-      <!--</div>-->
-    <!--</div>-->
   </div>
-  <div class="panel panel-default">
+ <!--  <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
-        <a href="/qa/php/php_index.html" class="collapsed">
-          PHP
+        <a class="collapsed"  href="/book/startUse.html">
+          功能说明
         </a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
         <ul>
-          <li><a href="/qa/php/ali.html">阿里云常见问题</a></li>
-          <li><a href="/qa/php/noapp.html">安装成功无数据</a></li>
-          <li><a href="/qa/php/turnbug.html">开启 debug</a></li>
-          <li><a href="/qa/php/chname.html">重命名 PHP 应用程序</a></li>
-          <li><a href="/qa/php/amh.html">AMH 云主机使用 OneAPM PHP Agent 方法</a></li>
-          <li><a href="/qa/php/phpother.html">其他常见问题</a></li>
+          <li><a href="/book/monitor/Read.html">监控</a></li>
+          <li><a href="/book/event/Read.html">事件</a></li>
+          <li><a href="/book/report/Read.html">报表</a></li>
+          <li><a href="/book/setting/Read.html">设置</a></li>
+          <li><a href="/book/keyTransaction/Read.html">关键事务</a></li>
+          <li><a href="/book/systemSet/Read.html">系统设置</a></li>
         </ul>
       </div>
     </div>
-  </div>
+  </div>-->
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
+    <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
-       <a href="/qa/net/dotnet_index.html" class="collapsed">
-         .NET
+        <a class="collapsed" >
+          视频演示
         </a>
       </h4>
     </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
         <ul>
-          <li><a href="/qa/net/pingAndTelnet.html">.NET Agent 安装成功，没有数据</a></li>
-          <li><a href="/qa/net/Investigation.html">.NET Agent 常见故障排查方法</a></li>
-          <li><a href="/qa/net/customMonitor.html">业务代码，自定义监控使用说明</a></li>
-          <li><a href="/qa/net/collectmessage.html">.NET Agent 收集日志信息方法</a></li>
+          <li><a href="/quick-start/videos01.html">如何使用 web 事务</a></li>
+          <li><a href="/quick-start/videos02.html">如何使用外部服务</a></li>
+          <li><a href="/quick-start/videos03.html">如何使用错误信息</a></li>
+          <li><a href="/quick-start/videos04.html">如何使用 JVM</a></li>
+          <li><a href="/quick-start/videos05.html">如何使用性能剖析</a></li>
+          <li><a href="/quick-start/videos06.html">如何使用关键事务</a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFour">
+  
+ 
+
+  <div class="panel">
+    <div class="panel-heading" role="tab" id="headingthree">
       <h4 class="panel-title">
-        <a href="/qa/python/python_index.html" class="collapsed">
-          Python
+        <a class="collapsed" href="/quick-start/bestpractice.html">
+          OneAPM 最佳实践
         </a>
       </h4>
     </div>
-    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-      <div class="panel-body">
-        <ul>
-          <li><a href="/qa/python/Pythonlog.html">Python Agent 日志录入和故障排查</a></li>
-          <li><a href="/qa/python/pingAndTelPython.html">Agent 成功部署后 OneAPM 界面无数据显示</a></li>
-        </ul>
-      </div>
-    </div>
   </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingFive">
-      <h4 class="panel-title">
-        <a href="/qa/nodejs/nodejs_index.html" class="collapsed">
-          Node.js
-        </a>
-      </h4>
-    </div>
-    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-      <div class="panel-body">
-        <ul>
-          <li><a href="/qa/nodejs/Nodejsqa.html">安装 Node.js Agent 时常见问题及解决办法</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingSix">
-      <h4 class="panel-title">
-       <a href="/qa/ruby/ruby_index.html" class="collapsed">
-          Ruby
-        </a>
-      </h4>
-    </div>
-    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
-      <div class="panel-body">
-        <ul>
-          <li><a href="/qa/ruby/Ruby.html">Ruby Agent 安装常见问题及解决办法</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
+
+    <!--<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">-->
+      <!--<div class="panel-body">-->
+        <!--<ul>-->
+        <!--</ul>-->
+      <!--</div>-->
+    <!--</div>-->
 </div>
 
         </div>
         <div class="col-xs-9 page-body">
           <div class="body-box">
-            <h1>Ruby 常见问题</h1>
+            <h1>OneAPM 最佳实践</h1>
+
+<p>知道如何使用 OneAPM 是一回事，但如何用好 OneAPM 是另一回事。以下是8个最佳实践，旨在帮您成为一位 OneAPM 大师&mdash;团队中的核心队员，让您的小伙伴与 OneAPM 一起持续优化保障应用性能，获得更好业务表现。</p>
+
+<blockquote>
+<p>Good better, best, Never let it rest. Till good is better, And better best</p>
+</blockquote>
+
+<h3>1. 规划团队协作模式</h3>
+
+<p>新注册 OneAPM 账号并登录后，您将看到一个默认的团队，团队只有一个成员，此成员的角色为 Admin，是团队的 owner，这时需要结合您的实际情况，考虑哪些人员可以登录 OneAPM 共同查看性能数据，是否需要分成不同的子团队，利用 OneAPM 团队信息中提供的添加成员、子团队等功能进行设置，方便团队协作。
+目前成员分为3个角色：</p>
+
+<ol>
+<li>Admin：团队的拥有者，具有最高权限</li>
+<li>Manager：所在团队的管理员，可以增删改查团队所属应用及修改配置，邀请、删除所在团队中的 User 成员。</li>
+<li>User：可以查看所属团队中应用的监控数据</li>
+</ol>
+
+<p>如何做：</p>
+
+<ol>
+<li>进入<strong>团队信息</strong></li>
+<li><strong>创建子团队</strong>或<strong>添加成员</strong></li>
+</ol>
+
+<h3>2. 标准化应用程序命名约定</h3>
+
+<p>如果未在 OneAPM 配置文件中指定名称，则大多数 OneAPM 探针都会提供默认应用程序名称，例如 “My Application” 或 “PHP Application”。您肯定不希望最终得到20个名称相同的应用程序，因此在部署应用程序时，请务必为其选择描述性标识符。为了保持一致性和易于导航，OneAPM 还建议标准化您的应用程序命名（例如，预发布的所有应用程序在名称末尾都有类似 [Staging] 等）。理想情况下，您希望自动命名新的 Java 应用程序，而不是手动命名，以帮助减少打字错误和误导的可能性。</p>
+
+<p>如何做：</p>
+
+<ol>
+<li>对于 Java 应用程序，当探针配置文件中的 <code>enable_auto_app_naming</code> 配置开启后，探针会自动获取每个应用的名称。获取的方式有六种：</li>
+</ol>
 
 <ul>
-      <li><a href="/qa/ruby/Ruby.html">Ruby Agent 安装常见问题及解决办法</a></li>
+<li>web.xml 中配置 servlet init param</li>
+<li>web.xml 中配置 Filter init param</li>
+<li>web.xml 中配置 context param</li>
+<li>web.xml 配置 appName(标签名：display-name)</li>
+<li>自动获取ServletContentPath(一般表现为url中项目名称)</li>
 </ul>
+
+<p>选择最符合您需要的方法，然后按照<a href="http://docs-ai.oneapm.com/qa/java/automatic-application-naming.html">步骤</a>操作。<br><br>
+ &nbsp;&nbsp;&nbsp; 2. 对于非 Java 应用程序，请参考<a href="http://docs-ai.oneapm.com/agent/">探针的文档</a>。</p>
+
+<h3>3. 创建和评估警报策略</h3>
+
+<p>大部分告警是基于 Apdex 分数，一个用来衡量用户对应用响应时间的满意程度的数值。Apdex T 是 Apdex 的核心价值 - 您需要确保将它设置为对您的特定应用有意义的值。OneAPM 建议将 Apdex T 值设置为 0.95，力求真正的优化。
+您设置了提醒之后，就需要确保您利用所有可行的通知渠道。毕竟，如果没有人知道，告警有什么用？您可以通过创建特定的用户组并通过电子邮件进行通知，另外您还可以配置集成 <a href="http://www.onealert.com/index.html">OneAlert</a> 来管理告警，实现更丰富的通知方式（包括电子邮件，短信，电话，微信，APP），协作分析等功能。
+请务必定期评估警报策略，以确保它们始终有效。</p>
+
+<p>怎么做： </p>
+
+<ol>
+<li>要更改 Apdex 设置，请转到<a href="http://docs-ai.oneapm.com/book/systemSet/alarmPolicy.html">此处</a>。</li>
+<li>需要更多的通知方式，请点击<a href="http://wiki.110monitor.com/services/notification.html">此处</a>进入 OneAlert 配置。</li>
+</ol>
+
+<h3>4. 识别和设置关键事务</h3>
+
+<p>根据应用程序的性质，一些事务可能比其他事务更重要。OneAPM 的关键事务功能旨在让您密切监控您决定的应用程序最关键业务的事务，无论是最终用户还是应用程序响应时间，调用次数或错误率等。您还可以在关键事务性能不佳时设置告警通知的阈值和级别。</p>
+
+<p>如何做： </p>
+
+<ol>
+<li>进入 Ai 某个应用，从左侧中，选择<strong>关键事务</strong>，然后选择<strong>添加</strong>。然后选择应用和 Web 事务。或从所选事务中，选择<strong>设置为关键事务</strong>。 </li>
+<li>键入关键事务的名称，然后选择<strong>创建关键事务</strong>。 </li>
+<li>可选：如果所选应用程序的探针支持自定义告警，请使用 OneAPM 自动填充的默认值，或选择<strong>编辑关键事务告警策略</strong>以设置 Apdex 和告警阈值。 </li>
+<li>要查看关键事务详细信息，请选择查看<strong>新的关键事务</strong>。</li>
+</ol>
+
+<p><img src="/images/bestpractice01.jpg" alt="Bestpractice01" /></p>
+
+<h3>5. 利用 OneAPM 的报表功能</h3>
+
+<p>从SLA，部署和容量到可扩展性，主机使用报告等等，OneAPM 提供了各种可下载的报告工具，呈现历史趋势 - 所有伟大的方式向高级管理团队或客户报告。查看可用报告的完整列表，并将其用于您的优势。 </p>
+
+<p>如何做：</p>
+
+<ol>
+<li>要查看报告，请从 OneAPM 左侧菜单栏中选择报表。 </li>
+<li>选择您要查看的报表。</li>
+<li>如果要保存或导出要共享的报表，请选择将此报表下载为.xls，这将创建一个以逗号分隔的值的报表。</li>
+</ol>
+
+<h3>6. 全面观察您的环境</h3>
+
+<p>使用 OneAPM 监视应用程序的一大好处是，它不只是让你可以看到你的应用程序栈的一部分，还包括了整体情况。如果您发现 OneAPM 中的性能问题，例如，您可以使用 OneAPM Ci 轻松跟踪回到硬件端。从移动和浏览器监控到集成测试等，OneAPM 的软件分析系列产品可以为您的应用程序的性能提供端到端的可视性，因此利用它您可以更好地对您的软件作出决策！ </p>
+
+<p>如何做：</p>
+
+<ol>
+<li>如果您没有使用任何 Ai 之外的产品，请注册其他您感兴趣的解决方案。许多 OneAPM 产品提供免费的标准版本，您可以在购买之前使用它测试（其中某些产品可永久免费使用😊）。 </li>
+<li>部署所有产品后，可以使用概览屏幕顶部的菜单栏轻松切换 OneAPM 产品。</li>
+</ol>
+
+<h3>7. 让您的探针保持最新</h3>
+
+<p>很可能您的组织已经有一组脚本用于将应用程序升级部署到您的环境中。以类似的方式，您还可以自动化您的 OneAPM 探针部署，以确保您的系统是最新的。作为一般规则，对最新的探针没有硬性和立刻更新的要求，但是您不应该运行超过一年的探针。 Puppet 和 Chef 脚本都是很好的部署框架，利用这些您可以将整个部署和管理过程自动化，使生活更轻松😊。 </p>
+
+<p>如何做：</p>
+
+<ol>
+<li><p>当需要一个升级时，请您定期查看正在使用探针的哪个版本。如果最新的探针版本包含所需的修补程序或您需要的一些其他功能，请下载它。 </p></li>
+<li><p>要手动部署探针： </p>
+
+<p>a. 备份当前探针目录。
+b. 将更新的探针部署到现有探针目录中。
+c. 通过将新文件与现有文件进行比较来修改配置文件。特别要确保将许可证密钥和自定义扩展名复制到新配置中。 
+d. 重新启动应用程序。
+e. 如果出现问题，请使用备份恢复旧探针，然后重新启动。 </p></li>
+<li><p>要自动部署探针（作为避免错误的首选方法），您可以： 
+a. 使用现有的部署脚本，只要它们可以适应处理部署。 
+b. 创建和维护专门部署和配置 OneAPM 探针的脚本。理想情况下，脚本将从文件被版本化的存储库（用于回滚目的）中提取探针文件。脚本创建完成后： 
+  i.  关闭应用程序（除非脚本处理此）。 
+  ii. 运行部署脚本。 
+  ii. 启动应用程序（除非脚本处理此）。 
+  iv. 如果出现问题，请运行脚本以将版本回滚到以前的版本。</p></li>
+</ol>
 
             <!--<hr style="margin-top: 50px;" />
 <div class="alert alert-warning" style="text-align:center; margin: 40px 0px;">
@@ -506,10 +586,19 @@
       </div>
     </div>
 
-
     <script type="text/javascript">
-        $(function() {
-          (function () {
+    //   $(function() {
+    //     $(".navbar-default .navbar-nav a[href='/quick-start/']").parent().addClass("active");
+    //     var panelHead= $(".panel-default  a[href='/quick-start/']").parent().parent();
+    //     panelHead.siblings().addClass('in');
+    //     panelHead.parent().siblings('div').map(function () {
+    //       $(this).removeClass('active');
+    //     });
+    //     panelHead.parent().addClass('active');
+    //   });
+      $(function() {
+        // $(".navbar-default .navbar-nav a[href='/agent/']").parent().addClass("active");
+        (function () {
             $('.panel-default').mouseenter(function () {
               if(!$(this).hasClass('active')){
                 $(this).children().addClass('in');
@@ -547,7 +636,8 @@
                 panelHead.parent().addClass('active');
               }
           })();
-        });
+      });
     </script>
+
   </body>
 </html>
