--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -370,8 +370,8 @@
           视频演示
         </a>
       </h4>
-        </div>
-       <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    </div>
+    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="panel-body">
         <ul>
           <li><a href="/quick-start/videos01.html">如何使用 web 事务</a></li>
@@ -383,14 +383,26 @@
         </ul>
       </div>
     </div>
+  </div>
   
+ 
+
+  <div class="panel">
+    <div class="panel-heading" role="tab" id="headingthree">
+      <h4 class="panel-title">
+        <a class="collapsed" href="/quick-start/bestpractice.html">
+          OneAPM 最佳实践
+        </a>
+      </h4>
+    </div>
+  </div>
+
     <!--<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">-->
       <!--<div class="panel-body">-->
         <!--<ul>-->
         <!--</ul>-->
       <!--</div>-->
     <!--</div>-->
-  </div>
 </div>
 
         </div>
