deleta java_Support_help

--- a/agent/python/Pythoninstall.html
+++ b/agent/python/Pythoninstall.html
@@ -472,7 +472,7 @@
           <div class="body-box">
             <h1>Python Agent 安装</h1>
 
-<p>以 ubunto 14.04 为例 （Flask 框架，Gunicorn 服务器）：</p>
+<p>以 ubuntu 14.04 为例 （Flask 框架，Gunicorn 服务器）：</p>
 
 <p>1.注册 OneAPM</p>
 
